main agregado + responsividad desktop/notebook

--- a/index.html
+++ b/index.html
@@ -84,8 +84,66 @@
                         </div>
                     </div>
                 </div> 
+                <div class="redes-sociales-main">
+                    <span class="icon-container">
+                        <i class="fa-brands fa-facebook"></i>
+                    </span>
+                    <span class="icon-container">
+                        <i class="fa-brands fa-twitter"></i>
+                    </span>
+                    <span class="icon-container">
+                        <i class="fa-brands fa-instagram"></i>
+                    </span>
+                </div>
             </div>
         </section>
     </header>
+
+    <main class="main">
+        <div class="container">
+            <div class="main-text">
+                <h1>Página web en remodelación</h1>
+                <p>Estamos trabajando en una nueva versión para nuestra página web. Mientras tanto, abajo encontrarás distintas opciones para poder acceder a nuestros servicios, trámites y más.</p>
+            </div>
+            <section class="main-servicios sitio">
+                <div class="servicio">
+                    <i class="fa-solid fa-globe servicio-icon"></i>
+                    <h2>Sitio web completo</h2>
+                    <p>Para acceder a nuestro sitio web completo (antiguo), haz click en el siguiente botón. </p>
+                    <button>
+                        <i class="fa-solid fa-up-right-from-square"></i>
+                        Ir al sitio
+                    </button>
+                </div>
+                <div class="servicio circulacion">
+                    <i class="fa-solid fa-car servicio-icon"></i>
+                    <h2>Permiso de circulación</h2>
+                    <p>Para acceder a la plataforma de pago, haz click en el siguiente botón</p>
+                    <button>
+                        <i class="fa-solid fa-up-right-from-square"></i>
+                        Ir al sitio
+                    </button>
+                </div>
+                <div class="servicio aseo">
+                    <i class="fa-solid fa-trash-can servicio-icon"></i>
+                    <h2>Exención de Derechos de Aseo</h2>
+                    <p>Para postular a la Exención de Derechos de Aseo, haz click en el siguiente botón. </p>
+                    <button>
+                        <i class="fa-solid fa-up-right-from-square "></i>
+                        Ir al sitio
+                    </button>
+                </div>
+                <div class="servicio gas">
+                    <i class="fa-solid fa-fire-flame-simple servicio-icon"></i>
+                    <h2>Beneficio del Gas Licuado</h2>
+                    <p>Para acceder a la postulación del beneficio del gas, haz click en el siguiente botón. </p>
+                    <button>
+                        <i class="fa-solid fa-up-right-from-square"></i>
+                        Ir al sitio
+                    </button>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
