Âmobile icon changed

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </a>
                 </div> 
                 <div class="construction">
-                    <i class="fa-solid fa-helmet-safety"></i>
+                    <i class="fa-solid fa-screwdriver-wrench"></i>
                 </div>
             </div>
         </section>
